--- a/index.html
+++ b/index.html
@@ -1,64 +1,62 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title> Awesome color palette generator </title>
 	<script src="script.js"></script>
 	<script src="colors.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
-	<link href="styles.css" type="text/css" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
 
-	
-	
 </head>
-	<body>
-	
-		<div id ="colors-viewer">
-			<h2> Paleta de colores </h2> 
-			
-			<div id="color1" class="color-view">
-			Fondo p&aacute;gina
-			</div>
-			
-			<div id="color2" class="color-view">
-			Texto elementos
-			</div>
-			
-			<div id="color3" class="color-view">
-			Borde elementos
-			</div>
-			
-			<div id="color4" class="color-view">
-			Fondo elementos
-			</div>
-			
-			<div id="color5" class="color-view">
-			Texto encabezado
-			</div>
+<body>
+	<div id ="colors-viewer">
+		<h2> Paleta de colores </h2>
+
+		<div id="color1" class="color-view">
+		Fondo página
 		</div>
 
-
-		<div id ="css-rules-div">
-			<h2> Reglas CSS</h2> 
-			<textarea id="css-rules" class="rules"> 
-.website-background{ color: #FFFFFF;}
-
-.element-text{ color: #FFFFFF;}
-
-.element-border{ border-color: #FFFFFF;}
-
-.element-background{ background-color: #FFFFFF;}
-
-.header{ color: #FFFFFF;}
-			</textarea>
+		<div id="color2" class="color-view">
+		Texto elementos
 		</div>
-		
-		
-		<div id="actions">
-			<button id='generate' onclick="generateRules()"> Generar nueva paleta</button>
-			<button id='clean' onclick="clean()"> Limpiar paleta</button>
+
+		<div id="color3" class="color-view">
+		Borde elementos
 		</div>
+
+		<div id="color4" class="color-view">
+		Fondo elementos
+		</div>
+
+		<div id="color5" class="color-view">
+		Texto encabezado
+		</div>
+	</div>
+
+
+	<div id ="css-rules-div">
+		<h2> Reglas CSS</h2>
+		<textarea id="css-rules" class="rules">
+			.website-background{ color: #FFFFFF;}
+
+			.element-text{ color: #FFFFFF;}
+
+			.element-border{ border-color: #FFFFFF;}
+
+			.element-background{ background-color: #FFFFFF;}
+
+			.header{ color: #FFFFFF;}
+		</textarea>
+	</div>
+
+
+	<div id="actions">
+		<button id='generate' onclick="generateRules()"> Generar nueva paleta</button>
+		<button id='clean' onclick="clean()"> Limpiar paleta</button>
+	</div>
 	</body>
 
 </html>
